tests/NormalTests/paczka1/fuzzy1/66113052.err
Error in line 6: c9aUBR A829 128,4
Error in line 15: S476 A829 99,6
Error in line 19: pKpAeF4f S47( 31,0
Error in line 10: 90DuZYnc S476 26,2
Error in line 20: 30MXZJVB A829 22,0
Error in line 31: pKpAeF4f S476 -1,1
Error in line 30: 90DuZYnc S564 131,9
Error in line 32: 90DuZYnc A829 74,5
Error in line 29: 30MXZJVB S564 1,2
Error in line 25: c9aUBR S476 57,1
